- Configura execução dos testes com a opção endorsed dirs correta
git-svn-id: https://subversion.tecgraf.puc-rio.br/engdist/openbus/sdk/java/trunk@151022 ae0415b3-e90b-0410-900d-d0be9363c56b